<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/card_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/detailCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir_medium"
            android:text="@string/details"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detailIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/weather_icon"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCardTitle"
            app:srcCompat="@drawable/ic_clear_sky" />

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:columnCount="2"
            app:layout_constraintEnd_toStartOf="@+id/detailIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailCardTitle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:fontFamily="@font/vazir_light"
                android:text="@string/feels_like"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/feelsLike"
                style="@style/card_row_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:fontFamily="@font/vazir_light"
                android:text="@string/humidity"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/humidity"
                style="@style/card_row_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:fontFamily="@font/vazir_light"
                android:text="@string/visibility"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/visibility"
                style="@style/card_row_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="16 کیلومتر" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:fontFamily="@font/vazir_light"
                android:text="@string/uv_index"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/uvIndex"
                style="@style/card_row_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1" />
        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
